--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -5,8 +5,7 @@ html(lang="es")
 		block titulo
 		meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
 		link(rel="icon", href="favicon.ico")
-		script(src = "http://192.168.1.100:35729/livereload.js?snipver=1")
-		//link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Lato")
+		link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Lato")
 		link(rel="stylesheet", href="css/estilos.css")
 		block head
 	body
