--- a/jade/index.jade
+++ b/jade/index.jade
@@ -28,6 +28,5 @@ block contenido
 					span Segundos
 		a(href="https://facebook.com/Desocabaya", class="btn-enlace", target="_blank")
 			span.icon-facebook2.btn-redes
-
 		a(href="https://twitter.com/DeSocabaya", class="btn-enlace", target="_blank")
-			span.ico-twitter2.btn-redes
+			span.icon-twitter2.btn-redes
