--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -7,7 +7,7 @@ html(lang="es")
 		link(rel="icon", href="favicon.ico")
 		link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Lato")
 		link(rel="stylesheet", href="css/estilos.css")
-		meta(name="description", content="Todo comiensa con una necesidad el buscar los lugares y sitios en Socabaya.")
+		meta(name="description", content="Todo comiensa con una necesidad el buscar los lugares y sitios en Socabaya")
 		block head
 	body
 		block contenido
