--- a/jade/index.jade
+++ b/jade/index.jade
@@ -28,7 +28,7 @@ block contenido
 					span Segundos
 		a(href="https://facebook.com/Desocabaya", class="btn-enlace", target="_blank")
 			span.icon-facebook2.btn-redes
-		a(href="mail:hola@desocabaya.com", class="btn-enlace", target="_blank")
+		a(href="", class="btn-enlace", id="suscribirse")
 			span.icon-mail.btn-redes
 		a(href="https://twitter.com/DeSocabaya", class="btn-enlace", target="_blank")
 			span.icon-twitter2.btn-redes
