--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -173,6 +173,54 @@ body
 .btn-redes
 	font-size: 30px
 	margin: 5px
+//formulario
+#frmcheck
+	background-color: #213338
+	border-radius: 10px
+	box-shadow: 0px 0px 5px 2px #1F1F1F
+	bottom: 50%
+	top: 50%
+	color: #fff
+	left: 0
+	margin: 0 auto
+	position: fixed
+	right: 0
+	text-align: center
+	width: 50%
+	height: 15%
+	display none
+	p
+		margin 0px
+	input
+		border-radius: 3px
+		border: 0
+		font-size: 0.8em
+		margin: 6px
+		outline: 0
+		padding: 5px
+	button
+		background: #ffc33e
+		color: #b36929
+		border: none
+		border-bottom: 4px solid #b36929
+		border-radius: 5px
+		cursor: pointer
+		padding: 5px 5px
+		vertical-align: middle
+		white-space: nowrap
+		outline 0
+	#cerrar
+		position: absolute
+		right: 0
+		top: -10px
+		background-color: black
+		border-radius: 15px
+		padding: 5px
+		width: 10px
+		height: 10px
+		line-height: 5px
+		box-shadow: 0px 0px 0px 1px snow
+		cursor: pointer
 //keyframe
 @keyframes tierra-girando
 	from
