--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -174,10 +174,14 @@ body
 	font-size: 30px
 	margin: 5px
 //formulario
-#frmcheck
+#formulario
 	background-color: #213338
 	border-radius: 10px
 	box-shadow: 0px 0px 5px 2px #1F1F1F
+.mensaje
+	padding: 10px
+	font-size: 1.1em
+#frmcheck
 	bottom: 50%
 	top: 50%
 	color: #fff
@@ -187,7 +191,6 @@ body
 	right: 0
 	text-align: center
 	width: 50%
-	height: 15%
 	display none
 	p
 		margin 0px
@@ -209,18 +212,18 @@ body
 		vertical-align: middle
 		white-space: nowrap
 		outline 0
-	#cerrar
-		position: absolute
-		right: 0
-		top: -10px
-		background-color: black
-		border-radius: 15px
-		padding: 5px
-		width: 10px
-		height: 10px
-		line-height: 5px
-		box-shadow: 0px 0px 0px 1px snow
-		cursor: pointer
+#cerrar
+	position: absolute
+	right: 0
+	top: -10px
+	background-color: black
+	border-radius: 15px
+	padding: 5px
+	width: 10px
+	height: 10px
+	line-height: 5px
+	box-shadow: 0px 0px 0px 1px snow
+	cursor: pointer
 //keyframe
 @keyframes tierra-girando
 	from
