--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -179,18 +179,18 @@ body
 	border-radius: 10px
 	box-shadow: 0px 0px 5px 2px #1F1F1F
 .mensaje
-	padding: 10px
-	font-size: 1.1em
+	padding 10px
+	font-size 1.1em
 #frmcheck
-	bottom: 50%
-	top: 50%
-	color: #fff
-	left: 0
-	margin: 0 auto
-	position: fixed
-	right: 0
-	text-align: center
-	width: 50%
+	bottom 50%
+	top 50%
+	color #fff
+	left 0
+	margin 0 auto
+	position fixed
+	right 0
+	text-align center
+	width 50%
 	display none
 	p
 		margin 0px
